--- a/style.css
+++ b/style.css
@@ -154,14 +154,12 @@ body {
 
 #home .dados {
   gap: 6rem;
-  width: 32.7rem;
   background-color: white;
   margin-inline: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-block: 4rem;
-  border: 1px solid var(--corfundo);
   border-radius: 0.6rem;
 }
 
@@ -183,12 +181,23 @@ body {
 nav {
   display: flex;
   position: fixed;
-  padding: 1.6rem 2.4rem;
-  top: 0;
+  
   height: var(--navheight);
   z-index: 100;
   width: 100%;
 }
+
+@media screen and (max-width: 640px){
+  #svg1 {
+  width: 8rem!important;
+  }
+  }
+
+
+.logo{
+
+}
+
 
 nav > .wrapper {
   display: flex;
@@ -356,7 +365,6 @@ body.menu-expanded button  path {
 
 /*  =================================== Sobre========================================== */
 #sobre img{
-  border: 1px solid #000000;
   border-radius: 20px;
   margin-bottom: 6rem;
 }
