--- a/style.css
+++ b/style.css
@@ -2,15 +2,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 * {
+  --hue : 170;
   font-family: 'DM Sans', sans-serif;
   font-size: 62.5%;
-  --corprimaria: #00856f;
-  --corsegundariatitulo: #212529;
-  --corsegundariaparagrafo: #495057;
-  --corfundo: #dce9e2;
+  --corprimaria: hsl(var(--hue), 100%, 26%);
+  --corsegundariatitulo: 	hsl(105, 100%, 5%);
+  --corsegundariaparagrafo: 	hsl(104, 16%, 24%);
+  --corfundo: hsl(calc(var(--hue) - 22), 23%, 89%);
   --navheight: 7.2rem;
-  --corfundo2: #F7F9F9;
-  --corfundo3 : #FFFAF1;
+  --corfundo2: hsl(180, 14%, 97%);
+  --corfundo3 : 	hsl(39, 100%, 97%);
+  --butaohover : 	hsl(var(--hue), 100%, 14%);
 
   margin: 0;
   padding: 0;
@@ -21,6 +23,15 @@
 *, html {
   scroll-behavior: smooth !important;
 }
+
+* a{
+  text-decoration: none;
+}
+
+* button{
+  cursor: pointer;
+}
+
 img{
   max-width: 100%;
 }
@@ -63,6 +74,28 @@ p{
   margin-bottom: 6rem;
   color: var(--corsegundariaparagrafo);
 
+}
+/*  =================================== Customizaçao de cor ========================================== */
+#services .card circle {
+  fill: var(--corfundo);
+
+}
+#navigation .logo path[fill*='#00856F'],
+#backToTopButto circle {
+  fill: var(--corprimaria);
+}
+
+button.open-menu path[stroke*='#00856F'],
+#contato li path {
+  stroke: var(--corprimaria);
+}
+body.menu-expanded #navigation .logo path ,
+#navigation.scroll .logo path{
+  fill: white;
+}
+
+#navigation.scroll button.open-menu path[stroke*='#00856F']{
+  stroke: white;
 }
 /*  =================================== HOME========================================== */
 body {
@@ -145,6 +178,11 @@ body {
   margin-left: auto;
 }
 
+#home button:hover{
+  background-color: var(--butaohover);
+  transition-duration: 200ms;
+}
+
 #mulher {
   display: block;
   margin-inline: auto;
@@ -205,14 +243,6 @@ nav > .wrapper {
 nav.scroll {
   background-color: var(--corprimaria);
 
-}
-
-nav.scroll #svg1 path {
-  fill: white;
-}
-
-nav.scroll #svg2 path {
-  stroke: white;
 }
 
 .menu{
@@ -294,7 +324,7 @@ body.menu-expanded .menu {
   font-size: 2.4rem;
 }
 
-.menu .button{
+.menu #butme{
   background: white;
   border-radius: 4rem;
   font-weight: 700;
@@ -309,6 +339,15 @@ body.menu-expanded .menu {
   margin-top: 4.8rem;
   margin-bottom: 8rem;
 }
+
+#butme:hover{
+  background-color: var(--corprimaria);
+  color: white;
+  transition-duration: .2s;
+  filter: brightness(1.3);
+
+}
+
 body.menu-expanded nav button,
 body.menu-expanded .logo{
   position: relative;
@@ -429,6 +468,11 @@ body.menu-expanded button  path {
   gap: 1.6rem;
 }
 
+#contato button:hover{
+  background-color: var(--butaohover);
+  transition-duration: .2s;
+}
+
 #contato h2{
   margin-bottom: 3.2rem;
   text-align: left;
@@ -464,4 +508,21 @@ footer li{
   gap: 2rem;
   padding: 3.2rem 0 6rem 2.4rem;
   height: 2.4rem;
+}
+
+/*  =================================== BacktoTop ========================================== */
+#backToTopButto{
+  position: fixed;
+  bottom: 1rem;
+  right: 2.5rem;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(100%);
+}
+
+#backToTopButto.show {
+  opacity: 1;
+  visibility: visible;
+  transition-duration: .2s;
+  transform: translateY(0);
 }
