--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 * {
-  --hue : 170;
+  --hue : 140;
   font-family: 'DM Sans', sans-serif;
   font-size: 62.5%;
   --corprimaria: hsl(var(--hue), 100%, 26%);
@@ -10,7 +10,7 @@
   --corsegundariaparagrafo: 	hsl(104, 16%, 24%);
   --corfundo: hsl(calc(var(--hue) - 22), 23%, 89%);
   --navheight: 7.2rem;
-  --corfundo2: hsl(180, 14%, 97%);
+  --corfundo2:hsl(calc(var(--hue) - 10), 14%, 97%);
   --corfundo3 : 	hsl(39, 100%, 97%);
   --butaohover : 	hsl(var(--hue), 100%, 14%);
 
@@ -37,7 +37,7 @@ img{
 }
 
 .wrapper {
-  width: 37.5rem;
+  width: min(50rem,100%);
   margin-inline: auto;
   padding-inline: 2.4rem;
   max-width: 100%;
@@ -160,22 +160,21 @@ body {
   border: none;
   border-radius: 4rem;
 
-  margin-bottom: 6rem;
 
-  height: 6.2rem;
-  width: 26.3rem;
+  height: 5.2rem;
+  width: 26rem;
 
   color: white;
   text-transform: uppercase;
   font-size: 1.4rem;
   font-weight: 700;
+  padding: 1.6rem 3.rem;
 
   display: flex;
   align-items: center;
   gap: 1.6rem;
   justify-content: center;
-  margin-right: auto;
-  margin-left: auto;
+  margin: auto;
 }
 
 #home button:hover{
@@ -234,7 +233,7 @@ nav {
 #svg2{
   padding-left: -1rem;
 }
-nav > .wrapper {
+nav  .wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -525,4 +524,152 @@ footer li{
   visibility: visible;
   transition-duration: .2s;
   transform: translateY(0);
+}
+/*  =================================== Responsivo ========================================== */
+
+@media (min-width: 1024px) {
+  /*  =================================== Navigation ========================================== */
+
+  .wrapper {
+    width: min(112rem,100%);
+    display: grid;
+  }
+
+  nav#navigation .wrapper *{
+    margin: 0;
+    padding: 0; 
+    background-color: initial;
+    visibility: initial;
+    display: initial;
+    opacity: initial;
+    flex-direction: initial;
+    position: initial;
+    transform: initial;
+    font-weight: initial;
+    font-size: initial;
+    color: initial;
+    filter: initial;
+  }
+
+  body #navigation .sociallinks,
+  body #navigation .open-menu,
+  body #navigation .close-menu{
+    display: none;
+  }
+
+  nav#navigation .menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 48%;
+  } 
+
+  nav#navigation .menu ul:nth-child(1){
+    display: flex;
+    gap: 3.2rem;
+  }
+
+  nav#navigation .menu ul li a{
+    color: var(--corprimaria);
+    opacity: 0.7;
+  }
+
+  nav#navigation .menu a.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2.4rem;
+    gap: 16px;
+    border: .1rem solid var(--corprimaria);
+    border-radius: 4rem;
+    color: var(--corprimaria);
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    text-transform: uppercase;
+  }
+  nav#navigation.scroll .menu ul li a{
+    color: var(--corfundo2);
+    opacity: 0.7;
+    font-weight: 400;
+  }
+
+  nav#navigation.scroll .menu a.button{
+    border-color: white;
+    color: white;
+  }
+
+  nav#navigation .menu li a.active,
+  nav#navigation.scroll .menu li a.active,
+  nav#navigation.scroll .menu li a:hover,
+  nav#navigation .menu li a:hover{
+    opacity: 1;
+    font-weight: 700;
+  }
+  nav#navigation .menu li a{
+    transition: opacity .4s;
+  }
+  nav#navigation .menu li a::after{
+    content: '';
+    width: 0%;
+    height: .2rem;
+    background-color: var(--corprimaria);
+    display: block;
+    position: relative;
+    bottom: -1.9rem;
+    left: -0.34rem;
+    transition: width .2s;
+  }
+
+  nav#navigation.scroll .menu li a::after{
+    background-color: white;
+  }
+
+  nav#navigation .menu li a.active::after,
+  nav#navigation .menu li a:hover::after{
+    padding-inline: 0.5rem;
+    width: 100%;
+  }
+  nav#navigation.scroll .menu a.button.active,
+  nav#navigation.scroll .menu a.button:hover{
+    background-color: var(--corprimaria);
+    filter: brightness(1.3);
+    border: none;
+  }
+  nav#navigation .menu a.button:hover{
+    background-color: var(--corprimaria);
+    color: white;
+    border: none;
+  }
+ /*  =================================== HOME ========================================== */
+ #home .wrapper{
+   grid-template-columns: 60.5rem 1fr ;
+   grid-template-areas:
+    'A B'
+    'C C' ;
+ }
+  
+ #home .col-a{
+   grid-area: A;
+   text-align: left;
+ }
+
+ #home .col-b{
+   grid-area: B;
+ }
+
+ #home .dados{
+   grid-area: C;
+   flex-direction: row;
+   padding: 6rem;
+ }
+
+ #home button{
+   margin: 0;
+ }
+
+
+
+
+ 
 }
